@@ -40,6 +40,7 @@ NEWS
   * check for symlinks after successful pathinfo matching (#1574)
   * fixed mod-proxy.t to run with a builddir outside of the src dir
   * do not suppress content on "307 Temporary Redirect" (#1412)
+  * fixed Content-Length header if response body gets removed in connections.c (#1412, part 2)
 
 - 1.4.18 - 2007-09-09
 
